--- a/TP2/tasks.json
+++ b/TP2/tasks.json
@@ -1,13 +1,13 @@
 [
     {
-        "type": "ping -c 5 10.0.3.2",
+        "type": "ping -c 5 10.0.1.10",
         "frequency": 2,
         "duration": 4,
         "devices": ["n1", "n2", "n3"],
         "Devices": {
             "devices_metric": {
                 "cpu_usage": true,
-                "ram_usage": false,
+                "ram_usage": true,
                 "interface_stats": ["eth0"]
             },
             "link_metrics": {
@@ -31,7 +31,7 @@
         }
     },
     {
-        "type": "ping -c 9 10.0.3.2",
+        "type": "traceroute 10.0.1.10",
         "frequency": 2,
         "duration": 4,
         "devices": ["n1", "n5", "n2"],
