--- a/TP2/tasks.json
+++ b/TP2/tasks.json
@@ -14,7 +14,7 @@
                 "use_iperf": true,
                 "server": "n2",
                 "duration": 30,
-                "server_address": null,
+                "server_address": "0.0.0.0",
                 "bandwidth": true,
                 "packet_loss": false,
                 "jitter": true,
@@ -46,7 +46,7 @@
                 "use_iperf": true,
                 "server": "n2",
                 "duration": 30,
-                "server_address": null,
+                "server_address": "0.0.0.0",
                 "bandwidth": true,
                 "packet_loss": false,
                 "jitter": true,
@@ -78,7 +78,7 @@
                 "use_iperf": true,
                 "server": "n2",
                 "duration": 30,
-                "server_address": null,
+                "server_address": "0.0.0.0",
                 "bandwidth": true,
                 "packet_loss": false,
                 "jitter": true,
